mobile css and responsiveness updates

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
 html {
   scroll-behavior: smooth;
+  height: 100%;
 }
 body {
   margin: 0;
+  height: 100%;
   font-family: "Lato", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
